--- a/views/index.erb
+++ b/views/index.erb
@@ -43,11 +43,15 @@
 						<option>yellow</option>
 						<option>grey</option>
 						<option>orange</option>
+						<optons>cyan</options>
+						<option>CornFlowerBlue</options>
+						<option>LightBlue</options>
+						<options>Navy</options>
 					</select>
 			Align: <select id="align">
 						<option>left</option>
 						<option>right</option>
-						<option>centre</option>
+						<option>center</option>
 					</select>
 		</div>
 		<div id="twitter">
