--- a/public/css/application.css
+++ b/public/css/application.css
@@ -13,6 +13,10 @@ header {
 	box-shadow: 1px 0 3px rgba(0, 0, 0, 0.3)
 }
 
+#search-results img {
+	padding: 5px;
+}
+
 #select-image {
 	background-color: rgba(255, 255, 255, 0.3);
 	padding: 10px;
